Fixed footer border bleed problem, closes #14

--- a/sass/_greyshade.scss
+++ b/sass/_greyshade.scss
@@ -83,6 +83,11 @@ body {
 			margin-right: 70px;
 			}
 		}
+		footer.inner {
+		  text-align: center;
+		  margin: 0px 70px 0px 40px;
+		  width: auto;
+		}
 		.mid-col-container {
 			padding: 0px 70px 0px 40px;
 			#content {
